--- a/chris-bot-dashboard/package.json
+++ b/chris-bot-dashboard/package.json
@@ -8,11 +8,13 @@
   },
   "devDependencies": {
     "@mdi/js": "^7.0.96",
+    "@vueuse/nuxt": "^9.0.0",
     "nuxt": "3.0.0-rc.6",
     "unplugin-vue-components": "^0.21.2"
   },
   "dependencies": {
     "@css-render/vue3-ssr": "^0.15.10",
+    "@vueuse/core": "^9.0.0",
     "express": "^4.18.1",
     "mdi": "^2.2.43",
     "mongoose": "^6.5.0",
