--- a/chris-bot-dashboard/package.json
+++ b/chris-bot-dashboard/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@css-render/vue3-ssr": "^0.15.10",
+    "@pinia/nuxt": "^0.3.1",
     "@vueuse/core": "^9.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mdi": "^2.2.43",
     "mongoose": "^6.5.0",
+    "pinia": "^2.0.17",
     "sass": "^1.54.0",
     "vuetify": "^3.0.0-beta.5"
   }
