--- a/chris-bot-dashboard/package.json
+++ b/chris-bot-dashboard/package.json
@@ -16,8 +16,10 @@
     "@css-render/vue3-ssr": "^0.15.10",
     "@pinia/nuxt": "^0.3.1",
     "@vueuse/core": "^9.0.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "mdi": "^2.2.43",
     "mongoose": "^6.5.0",
     "pinia": "^2.0.17",
