--- a/chris-bot-dashboard/package.json
+++ b/chris-bot-dashboard/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^6.5.0",
     "pinia": "^2.0.17",
     "sass": "^1.54.0",
+    "universal-cookie": "^4.0.4",
     "vuetify": "^3.0.0-beta.5"
   }
 }
