--- a/chris-bot-dashboard/tsconfig.json
+++ b/chris-bot-dashboard/tsconfig.json
@@ -1,8 +1,3 @@
 {
-  // https://v3.nuxtjs.org/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json",
-  "compilerOptions": {
-    // ...
-    "types": ["naive-ui/volar"]
-  }
+  "extends": "./.nuxt/tsconfig.json"
 }
