--- a/chris-bot-dashboard/package.json
+++ b/chris-bot-dashboard/package.json
@@ -5,7 +5,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "dev:preview": "NITRO_HOST=localhost node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
     "@mdi/js": "^7.0.96",
